# pintu

./: .gitignore  LICENSE  README.md  README_OLD.md  capture.sh  config.py  gpio_test.py  main.py  max_lcd_brightness  peripherals_io.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.config/autostart/: Max LCD Brightness.desktop
boot/: armbianEnv.txt
config/: alt_events.json  events.json  logging.conf
docs/source/: conf.py  footer.rst  index.rst
env2.7/local/: bin  lib
etc/: modules
src/pintu/: __init__.py  api.py  capture.py  config.py  default.py  detection.py  gpio.py  imaging.py  record.py  util.py
src/scripts/: install.sh  install_dependencies.sh  pintu-api  pintu-capture  pintu-detect  pintu-installer  pintu-record  rpios64_01_update_eeprom.sh  rpios64_02_install_zram.sh  rpios64_03_build_opencv.sh  rpios64_04_build_ncnn.sh  zram.sh
tests/: conftest.py  dummy_test.py
